@@ -24,6 +24,7 @@ Changes in 1.1:
 - Use weak pointers in PeerConnector and Authenticate (257126)
 - When a webseed has 3 connection failures, wait 30 seconds and try again instead of not using it anymore (258210)
 - Fix crash in PeerConnector cleanup (258878)
+- Queue data checks so that they run one after the other (215711)
 
 Changes in 1.0.5:
 - Update PeerID client identifications
